netpoltest/dnstools124.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnstools124
spec:
  containers:
  - name: dnstools
    image: infoblox/dnstools:latest
    command:
    - sleep
    - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
